--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="dist/css/index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -10,6 +11,39 @@
       <!-- Authentication form  -->
       <!-- HTML form validation  -->
       <!-- Action direct to /profile  -->
+      <!-- nav  -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <!-- <a class="navbar-brand fs-1 text" href="index.html">CodeSharing</a> -->
+
+        <div class="collapse.show navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav fs-1 text">
+            <li class="nav-item">
+              <a class="nav-link current" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="feed/index.html">Feed</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile/index.html">Profile</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- nav end -->
+      <!-- Headings  -->
+      <div class="headers">
+        <div class="text p-5 text-light d-sm-none d-xs-none">
+          <h1>CodeSharing on your mobile</h1>
+        </div>
+        <div class="text p-5 text-light fs-2 text d-none d-sm-block d-lg-none">
+          <h1>CodeSharing on your tablet</h1>
+        </div>
+        <div class="text p-5 text-light fs-3 text d-none d-lg-block">
+          <h1>CodeSharing on your desktop</h1>
+        </div>
+      </div>
+      <!-- Headings end -->
     </main>
   </body>
 </html>
