--- a/index.html
+++ b/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/index.css" />
-    <title>Document</title>
+    <title>CodeSharing | Home</title>
   </head>
   <body>
     <main>
-      <!-- Authentication form  -->
-      <!-- HTML form validation  -->
-      <!-- Action direct to /profile  -->
       <!-- nav  -->
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <!-- <a class="navbar-brand fs-1 text" href="index.html">CodeSharing</a> -->
-
         <div class="collapse.show navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav fs-1 text">
+          <ul class="navbar-nav fs-3 text">
             <li class="nav-item">
               <a class="nav-link current" href="#">Home</a>
             </li>
@@ -29,21 +24,60 @@
           </ul>
         </div>
       </nav>
-
       <!-- nav end -->
-      <!-- Headings  -->
-      <div class="headers">
-        <div class="text p-5 text-light d-sm-none d-xs-none">
-          <h1>CodeSharing on your mobile</h1>
+
+      <div class="main-container">
+        <!-- responsive headings  -->
+        <div class="headers">
+          <div class="text p-5 text-light d-sm-none d-xs-none">
+            <h1>CodeSharing on your mobile</h1>
+          </div>
+          <div
+            class="text p-5 text-light fs-2 text d-none d-sm-block d-lg-none"
+          >
+            <h1>CodeSharing on your tablet</h1>
+          </div>
+          <div class="text p-5 text-light fs-3 text d-none d-lg-block">
+            <h1>CodeSharing on your home computer</h1>
+          </div>
         </div>
-        <div class="text p-5 text-light fs-2 text d-none d-sm-block d-lg-none">
-          <h1>CodeSharing on your tablet</h1>
-        </div>
-        <div class="text p-5 text-light fs-3 text d-none d-lg-block">
-          <h1>CodeSharing on your desktop</h1>
-        </div>
+        <!-- Headings end -->
+
+        <!-- Form  -->
+        <form action="/profile" method="get">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              class="form-control narrow-input"
+              id="username"
+              name="username"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control narrow-input"
+              id="password"
+              name="password"
+              required
+              minlength="8"
+            />
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="rememberMe" />
+            <label class="form-check-label" for="rememberMe">Remember me</label>
+          </div>
+          <button type="submit" class="btn btn-primary mt-3">Login</button>
+          <p>
+            Don't have an account?
+            <a href="register" class="text-danger">Register here</a>
+          </p>
+        </form>
+        <!-- Form end -->
       </div>
-      <!-- Headings end -->
     </main>
   </body>
 </html>
