--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <!-- nav  -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <nav class="navbar navbar-expand-lg">
         <div class="collapse.show navbar-collapse" id="navbarNav">
           <ul class="navbar-nav fs-3 text">
             <li class="nav-item">
@@ -26,7 +26,7 @@
       </nav>
       <!-- nav end -->
 
-      <div class="main-container">
+      <div class="container mg-dark">
         <!-- responsive headings  -->
         <div class="headers">
           <div class="text p-5 text-light d-sm-none d-xs-none">
@@ -78,6 +78,25 @@
         </form>
         <!-- Form end -->
       </div>
+
+      <!-- Footer  -->
+      <div class="container">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="feed/index.html" class="nav-link px-2">Feed</a>
+            </li>
+            <li class="nav-item">
+              <a href="profile/index.html" class="nav-link px-2">Profile</a>
+            </li>
+          </ul>
+          <p class="text-center">© 2023 CodeSharing, Inc</p>
+        </footer>
+      </div>
+      <!-- Footer end -->
     </main>
   </body>
 </html>
