--- a/profile/index.html
+++ b/profile/index.html
@@ -8,11 +8,6 @@
   </head>
   <body>
     <main>
-      <!-- Profile image  -->
-      <!-- Username  -->
-      <!-- List of user posts  -->
-      <!-- Follow button  -->
-      <!-- Area to display followers -->
       <!-- nav  -->
       <nav class="navbar navbar-expand-lg">
         <div class="collapse.show navbar-collapse" id="navbarNav">
@@ -21,10 +16,10 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="feed/index.html">Feed</a>
+              <a class="nav-link current" href="#">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link current" href="#">Profile</a>
+              <a class="nav-link" href="../feed/index.html">Feed</a>
             </li>
           </ul>
         </div>
@@ -34,32 +29,104 @@
       <!-- User  -->
       <div class="container">
         <div class="user d-flex flex-column align-items-center">
-          <p class="username">@Username</p>
           <div class="profile-pic">
             <img src="../images/morten.jpeg" alt="#" />
           </div>
-          <button class="my-3">Followers</button>
+          <p class="username py-1 px-2">@Ramsnes</p>
+
+          <!-- Buttons  -->
+          <div class="buttons">
+            <button class="btn my-3 mx-3">Followers</button>
+            <button type="submit" class="btn btn-outline-primary mx-3">
+              <svg
+                class="heart-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-heart me-2"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
+                ></path></svg
+              >Follow
+            </button>
+          </div>
+          <!-- Buttons end  -->
         </div>
       </div>
       <!-- User end -->
 
-      <!-- Footer  -->
-      <div class="container">
-        <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item">
-              <a href="#" class="nav-link px-2">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="feed/index.html" class="nav-link px-2">Feed</a>
-            </li>
-            <li class="nav-item">
-              <a href="profile/index.html" class="nav-link px-2">Profile</a>
-            </li>
-          </ul>
-          <p class="text-center">© 2023 CodeSharing, Inc</p>
-        </footer>
+      <!-- posts  -->
+      <div class="container col-lg-10 col-xl-8 col-xxl-6">
+        <div class="card m-3">
+          <img src="../images/code01-.jpeg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
+              deserunt quae?
+            </p>
+            <img src="/images/morten.jpeg" />
+          </div>
+        </div>
+        <div class="card m-3">
+          <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
+              deserunt quae?
+            </p>
+            <img src="/images/morten.jpeg" />
+          </div>
+        </div>
+        <div class="card m-3">
+          <img src="../images/code03-.jpeg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
+              deserunt quae?
+            </p>
+            <img src="/images/morten.jpeg" />
+          </div>
+        </div>
+        <div class="card m-3">
+          <img src="../images/code04-.jpeg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
+              deserunt quae?
+            </p>
+            <img src="/images/morten.jpeg" />
+          </div>
+        </div>
       </div>
+      <!-- posts end -->
+
+      <!-- Footer  -->
+      <footer class="py-3 my-4 mt-auto">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="feed/index.html" class="nav-link px-2">Feed</a>
+          </li>
+          <li class="nav-item">
+            <a href="profile/index.html" class="nav-link px-2">Profile</a>
+          </li>
+        </ul>
+        <p class="text-center">© 2023 CodeSharing, Inc</p>
+      </footer>
       <!-- Footer end -->
     </main>
   </body>
