--- a/feed/index.html
+++ b/feed/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../dist/css/index.css" />
+    <title>CodeSharing | Your feed</title>
   </head>
   <body>
     <main>
@@ -11,6 +12,63 @@
       <!-- Search bar -->
       <!-- Sort options  -->
       <!-- Form to create new posts  -->
+      <!-- nav  -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="collapse.show navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav fs-3 text">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link current" href="../feed/index.html">Feed</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- nav end -->
+
+      <div class="container col-lg-10 col-xl-8 col-xxl-6">
+        <!-- Form  -->
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Subject</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+            />
+            <div id="emailHelp" class="form-text">
+              Please keep it short'n sweet
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label"
+              >Message</label
+            >
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+            />
+          </div>
+          <div class="mb-3 form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="exampleCheck1"
+            />
+            <label class="form-check-label" for="exampleCheck1"
+              >I am human</label
+            >
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <!-- Form end -->
+      </div>
     </main>
   </body>
 </html>
