--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
               <a class="nav-link current" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="feed/index.html">Feed</a>
+              <a class="nav-link" href="profile/index.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile/index.html">Profile</a>
+              <a class="nav-link" href="feed/index.html">Feed</a>
             </li>
           </ul>
         </div>
       </nav>
       <!-- nav end -->
 
-      <div class="container mg-dark">
+      <div class="container mg-dark d-flex flex-column">
         <!-- responsive headings  -->
         <div class="headers">
           <div class="text p-5 text-light d-sm-none d-xs-none">
@@ -70,7 +70,9 @@
             <input type="checkbox" class="form-check-input" id="rememberMe" />
             <label class="form-check-label" for="rememberMe">Remember me</label>
           </div>
-          <button type="submit" class="btn btn-primary mt-3">Login</button>
+          <button type="submit" class="btn login-btn btn-primary mt-3 mb-3">
+            Login
+          </button>
           <p>
             Don't have an account?
             <a href="register" class="text-danger">Register here</a>
@@ -80,22 +82,20 @@
       </div>
 
       <!-- Footer  -->
-      <div class="container">
-        <footer class="py-3 my-4">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item">
-              <a href="#" class="nav-link px-2">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="feed/index.html" class="nav-link px-2">Feed</a>
-            </li>
-            <li class="nav-item">
-              <a href="profile/index.html" class="nav-link px-2">Profile</a>
-            </li>
-          </ul>
-          <p class="text-center">© 2023 CodeSharing, Inc</p>
-        </footer>
-      </div>
+      <footer class="py-3 my-4 mt-auto">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="feed/index.html" class="nav-link px-2">Feed</a>
+          </li>
+          <li class="nav-item">
+            <a href="profile/index.html" class="nav-link px-2">Profile</a>
+          </li>
+        </ul>
+        <p class="text-center">© 2023 CodeSharing, Inc</p>
+      </footer>
       <!-- Footer end -->
     </main>
   </body>
