--- a/feed/index.html
+++ b/feed/index.html
@@ -20,39 +20,40 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
+              <a class="nav-link" href="../profile/index.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link current" href="../feed/index.html">Feed</a>
+              <a class="nav-link current" href="#">Feed</a>
             </li>
           </ul>
         </div>
       </nav>
       <!-- nav end -->
 
-      <div class="container col-lg-10 col-xl-8 col-xxl-6">
+      <div class="container col-lg-10 col-xl-8 col-xxl-6 d-flex flex-column">
+        <h2 class="mt-5 mb-4">Submit your post</h2>
         <!-- Form  -->
         <form>
           <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Subject</label>
+            <label for="exampleInputSubject" class="form-label">Subject</label>
             <input
-              type="email"
+              type="text"
               class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
+              placeholder="Write your subject"
+              id="exampleInputSubject"
+              aria-describedby="Subject"
             />
-            <div id="emailHelp" class="form-text">
-              Please keep it short'n sweet
-            </div>
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              >Message</label
-            >
+            <label for="exampleInputMessage" class="form-label">Message</label>
             <input
-              type="password"
+              type="text"
               class="form-control"
-              id="exampleInputPassword1"
+              type="text"
+              placeholder="Write your message"
+              aria-label="Message"
+              id="exampleInputMessage"
+            />
             />
           </div>
           <div class="mb-3 form-check">
@@ -69,6 +70,23 @@
         </form>
         <!-- Form end -->
       </div>
+
+      <!-- Footer  -->
+      <footer class="py-3 my-4 mt-auto">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item">
+            <a href="#" class="nav-link px-2">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="feed/index.html" class="nav-link px-2">Feed</a>
+          </li>
+          <li class="nav-item">
+            <a href="profile/index.html" class="nav-link px-2">Profile</a>
+          </li>
+        </ul>
+        <p class="text-center">© 2023 CodeSharing, Inc</p>
+      </footer>
+      <!-- Footer end -->
     </main>
   </body>
 </html>
