--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=3.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/index.css" />
     <title>CodeSharing | Home</title>
   </head>
@@ -75,7 +75,7 @@
           </button>
           <p>
             Don't have an account?
-            <a href="register" class="text-danger">Register here</a>
+            <a href="#" class="text-danger">Register here</a>
           </p>
         </form>
         <!-- Form end -->
