--- a/feed/index.html
+++ b/feed/index.html
@@ -32,7 +32,7 @@
 
       <h2 class="mt-5 mb-4">Submit your post</h2>
 
-      <!-- second form  -->
+      <!--  form  -->
       <div class="container col-lg-10 col-xl-8 col-xxl-6 d-flex flex-column">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label"
@@ -61,15 +61,23 @@
         >
         <input class="form-control" type="file" id="formFile" />
       </div>
-      <div class="mb-3 form-check">
+
+      <!-- Form check human  -->
+      <div class="mb-3 form-check d-flex my-2 justify-content-center">
         <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">I am human</label>
+        <label class="form-check-label mx-2" for="exampleCheck1"
+          >I am human</label
+        >
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-      <!-- second form end -->
+      <div class="m-2 d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      <!-- Form check human end  -->
+
+      <!-- form end -->
 
       <!-- Footer  -->
-      <footer class="py-3 my-4 mt-auto">
+      <footer class="py-3 my-4 mt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
             <a href="#" class="nav-link px-2">Home</a>
