--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <!-- Footer  -->
-      <footer class="py-3 my-4 mt-auto">
+      <footer class="py-3 my-4 mt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
             <a href="#" class="nav-link px-2">Home</a>
