--- a/profile/index.html
+++ b/profile/index.html
@@ -113,7 +113,7 @@
       <!-- posts end -->
 
       <!-- Footer  -->
-      <footer class="py-3 my-4 mt-auto">
+      <footer class="py-3 my-4 mt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
             <a href="#" class="nav-link px-2">Home</a>
