trying fix rows feed

--- a/feed/index.html
+++ b/feed/index.html
@@ -30,6 +30,139 @@
       </nav>
       <!-- nav end -->
 
+      <!-- search bar -->
+      <h2 class="my-5">Search for your favorite codes</h2>
+      <div class="container mt-5 mb-3">
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2 my-3"
+            type="search"
+            placeholder="Search posts"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+      <!-- search bar end -->
+
+      <!-- Feed posts -->
+      <h2>Your feed</h2>
+      <div class="container mt-3">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code01-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">Intro to back-end</h5>
+                <p class="card-text">
+                  Here is my quick guide and intro to back-end. A short
+                  introduction into the coding-world behind what you normally
+                  see in your front-end world.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code02-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">My cheat sheet</h5>
+                <p class="card-text">
+                  Here is a collection of my 'cheat sheet' of different
+                  codeblocks, which I've taken from codepen. But I've included
+                  some extra blocks exclusively here.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code02-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">My cheat sheet</h5>
+                <p class="card-text">
+                  Here is a collection of my 'cheat sheet' of different
+                  codeblocks, which I've taken from codepen. But I've included
+                  some extra blocks exclusively here.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code02-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">My cheat sheet</h5>
+                <p class="card-text">
+                  Here is a collection of my 'cheat sheet' of different
+                  codeblocks, which I've taken from codepen. But I've included
+                  some extra blocks exclusively here.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code02-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">My cheat sheet</h5>
+                <p class="card-text">
+                  Here is a collection of my 'cheat sheet' of different
+                  codeblocks, which I've taken from codepen. But I've included
+                  some extra blocks exclusively here.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card m-3 small-card">
+              <img
+                src="../images/code02-.jpeg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <h5 class="card-title">My cheat sheet</h5>
+                <p class="card-text">
+                  Here is a collection of my 'cheat sheet' of different
+                  codeblocks, which I've taken from codepen. But I've included
+                  some extra blocks exclusively here.
+                </p>
+                <img src="/images/morten.jpeg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Feed posts end -->
+
       <h2 class="mt-5 mb-4">Submit your post</h2>
 
       <!--  form  -->
@@ -73,7 +206,6 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
       <!-- Form check human end  -->
-
       <!-- form end -->
 
       <!-- Footer  -->
