--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
           <div class="text p-5 text-light fs-3 text d-none d-lg-block">
             <h3>CodeSharing on your home computer</h3>
           </div>
+          <p>
+            Join hundreds of others and share your code, and contribute in
+            developing each others' coding-skills!
+          </p>
         </div>
         <!-- Headings end -->
 
