--- a/profile/index.html
+++ b/profile/index.html
@@ -64,11 +64,11 @@
         <div class="card m-3">
           <img src="../images/code01-.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Intro to back-end</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
-              deserunt quae?
+              Here is my quick guide and intro to back-end. A short introduction
+              into the coding-world behind what you normally see in your
+              front-end world.
             </p>
             <img src="/images/morten.jpeg" />
           </div>
@@ -76,11 +76,11 @@
         <div class="card m-3">
           <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">My cheat sheet</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
-              deserunt quae?
+              Here is a collection of my 'cheat sheet' of different codeblocks,
+              which I've taken from codepen. But I've included som extra blocks
+              exclusively here.
             </p>
             <img src="/images/morten.jpeg" />
           </div>
@@ -88,11 +88,11 @@
         <div class="card m-3">
           <img src="../images/code03-.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Bootstrap</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
-              deserunt quae?
+              I've made a tutorial of some of the different functions in
+              bootstrap that I've wished I know about before I started. It goes
+              a bit more in-depht, but still not too deep.
             </p>
             <img src="/images/morten.jpeg" />
           </div>
@@ -100,11 +100,11 @@
         <div class="card m-3">
           <img src="../images/code04-.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">JS API fetch with WP</h5>
             <p class="card-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Laudantium nisi vero recusandae, blanditiis perspiciatis qui
-              deserunt quae?
+              I've made a quick tutorial on how to fetch an API-call by using
+              WordPress as a setup for your customizable REST API. This tutorial
+              follows a step-by-step guide on how to set it all up.
             </p>
             <img src="/images/morten.jpeg" />
           </div>
