--- a/feed/index.html
+++ b/feed/index.html
@@ -8,10 +8,6 @@
   </head>
   <body>
     <main>
-      <!-- List of post thumbnails  -->
-      <!-- Search bar -->
-      <!-- Sort options  -->
-      <!-- Form to create new posts  -->
       <!-- nav  -->
       <nav class="navbar navbar-expand-lg">
         <div class="collapse.show navbar-collapse" id="navbarNav">
@@ -50,121 +46,103 @@
       <!-- Feed posts -->
       <h2>Your feed</h2>
       <div class="container mt-3">
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code01-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Intro to back-end</h5>
-                <p class="card-text">
-                  Here is my quick guide and intro to back-end. A short
-                  introduction into the coding-world behind what you normally
-                  see in your front-end world.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+        <div class="row justify-content-evenly">
+          <!-- Sort btn  -->
+          <div class="dropdown d-flex justify-content-center">
+            <button
+              class="btn btn-secondary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Sort
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Latest</a></li>
+              <li><a class="dropdown-item" href="#">Oldest</a></li>
+              <li><a class="dropdown-item" href="#">a-z</a></li>
+              <li><a class="dropdown-item" href="#">z-a</a></li>
+            </ul>
+          </div>
+          <!-- Sort btn end -->
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code01-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Intro to back-end</h5>
+              <p class="card-text">
+                Here is my quick guide and intro to back-end. A short
+                introduction into the coding-world behind what you normally see
+                in your front-end world.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code02-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">My cheat sheet</h5>
-                <p class="card-text">
-                  Here is a collection of my 'cheat sheet' of different
-                  codeblocks, which I've taken from codepen. But I've included
-                  some extra blocks exclusively here.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">My cheat sheet</h5>
+              <p class="card-text">
+                Here is a collection of my 'cheat sheet' of different
+                codeblocks, which I've taken from codepen. But I've included
+                some extra blocks exclusively here.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code02-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">My cheat sheet</h5>
-                <p class="card-text">
-                  Here is a collection of my 'cheat sheet' of different
-                  codeblocks, which I've taken from codepen. But I've included
-                  some extra blocks exclusively here.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">My cheat sheet</h5>
+              <p class="card-text">
+                Here is a collection of my 'cheat sheet' of different
+                codeblocks, which I've taken from codepen. But I've included
+                some extra blocks exclusively here.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code02-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">My cheat sheet</h5>
-                <p class="card-text">
-                  Here is a collection of my 'cheat sheet' of different
-                  codeblocks, which I've taken from codepen. But I've included
-                  some extra blocks exclusively here.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">My cheat sheet</h5>
+              <p class="card-text">
+                Here is a collection of my 'cheat sheet' of different
+                codeblocks, which I've taken from codepen. But I've included
+                some extra blocks exclusively here.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code02-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">My cheat sheet</h5>
-                <p class="card-text">
-                  Here is a collection of my 'cheat sheet' of different
-                  codeblocks, which I've taken from codepen. But I've included
-                  some extra blocks exclusively here.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">My cheat sheet</h5>
+              <p class="card-text">
+                Here is a collection of my 'cheat sheet' of different
+                codeblocks, which I've taken from codepen. But I've included
+                some extra blocks exclusively here.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="card m-3 small-card">
-              <img
-                src="../images/code02-.jpeg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">My cheat sheet</h5>
-                <p class="card-text">
-                  Here is a collection of my 'cheat sheet' of different
-                  codeblocks, which I've taken from codepen. But I've included
-                  some extra blocks exclusively here.
-                </p>
-                <img src="/images/morten.jpeg" />
-              </div>
+          <div class="card m-3 small-card p-0">
+            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">My cheat sheet</h5>
+              <p class="card-text">
+                Here is a collection of my 'cheat sheet' of different
+                codeblocks, which I've taken from codepen. But I've included
+                some extra blocks exclusively here.
+              </p>
+              <img src="/images/morten.jpeg" />
             </div>
           </div>
         </div>
       </div>
       <!-- Feed posts end -->
 
-      <h2 class="mt-5 mb-4">Submit your post</h2>
-
+      <h2 class="mt-5 mb-4">Submit your own post</h2>
       <!--  form  -->
       <div class="container col-lg-10 col-xl-8 col-xxl-6 d-flex flex-column">
         <div class="mb-3">
@@ -225,5 +203,10 @@
       </footer>
       <!-- Footer end -->
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
