--- a/feed/index.html
+++ b/feed/index.html
@@ -67,75 +67,87 @@
           </div>
           <!-- Sort btn end -->
           <div class="card m-3 small-card p-0">
-            <img src="../images/code01-.jpeg" class="card-img-top" alt="..." />
+            <img
+              src="../images/arrayobject.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">Intro to back-end</h5>
+              <h5 class="card-title">Arrays and objects</h5>
               <p class="card-text">
-                Here is my quick guide and intro to back-end. A short
-                introduction into the coding-world behind what you normally see
-                in your front-end world.
+                This post will explain the key differences between arrays and
+                objects, and how the work together.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p1.jpeg" />
             </div>
           </div>
           <div class="card m-3 small-card p-0">
-            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <img
+              src="../images/bootstrap-5-layout.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">My cheat sheet</h5>
+              <h5 class="card-title">Bootstrap</h5>
               <p class="card-text">
-                Here is a collection of my 'cheat sheet' of different
-                codeblocks, which I've taken from codepen. But I've included
-                some extra blocks exclusively here.
+                Here I am explaining some of the key factors of working with
+                bootstrap, and how you can utilize is effectively.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p2.jpeg" />
             </div>
           </div>
           <div class="card m-3 small-card p-0">
-            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <img
+              src="../images/frameworks.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">My cheat sheet</h5>
+              <h5 class="card-title">Frameworks</h5>
               <p class="card-text">
-                Here is a collection of my 'cheat sheet' of different
-                codeblocks, which I've taken from codepen. But I've included
-                some extra blocks exclusively here.
+                An in-depth explanations of how frameworks operate, and how the
+                make your coding much more enjoyable and easy to pull off.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p3.jpeg" />
             </div>
           </div>
           <div class="card m-3 small-card p-0">
-            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <img
+              src="../images/functions.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
-              <h5 class="card-title">My cheat sheet</h5>
+              <h5 class="card-title">Functions</h5>
               <p class="card-text">
-                Here is a collection of my 'cheat sheet' of different
-                codeblocks, which I've taken from codepen. But I've included
-                some extra blocks exclusively here.
+                I am posting some of my explanations on how functions work,
+                based off of what helped me to better understand them and how to
+                use them effectively.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p4.jpeg" />
             </div>
           </div>
           <div class="card m-3 small-card p-0">
-            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <img src="../images/html.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">My cheat sheet</h5>
+              <h5 class="card-title">HTML</h5>
               <p class="card-text">
-                Here is a collection of my 'cheat sheet' of different
-                codeblocks, which I've taken from codepen. But I've included
-                some extra blocks exclusively here.
+                A beginner-friendly walkthrough on HTML and how to use it to the
+                best of your abilities in the beginnning of your coding-journey.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p5.jpeg" />
             </div>
           </div>
           <div class="card m-3 small-card p-0">
-            <img src="../images/code02-.jpeg" class="card-img-top" alt="..." />
+            <img src="../images/htmlcss.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">My cheat sheet</h5>
+              <h5 class="card-title">HTML & CSS</h5>
               <p class="card-text">
-                Here is a collection of my 'cheat sheet' of different
-                codeblocks, which I've taken from codepen. But I've included
-                some extra blocks exclusively here.
+                I've made a guide on how I like to combine HTML with CSS, and to
+                make it as DRY as possible, and keeping it structured using som
+                of my simple syntax principles.
               </p>
-              <img src="/images/morten.jpeg" />
+              <img src="/images/p6.jpeg" />
             </div>
           </div>
         </div>
