--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="CodeSharing, sharing your code with the world"
+    />
     <link rel="stylesheet" href="dist/css/index.css" />
+    <link
+      rel="shortcut icon"
+      href="/images/favicon_io/favicon-16x16.png"
+      type="image/x-icon"
+    />
     <title>CodeSharing | Home</title>
   </head>
   <body>
